Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2338

Memory leak in ProjectExplorer plugin - TargetSettingsPanelWidget

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P5: Not important
    • Qt Creator 2.1.0
    • Qt Creator 2.1.0
    • None
    • Qt Creator master branch:
      commit 7aaaa750945cfd333404b20fa486e22bcb8dd732
      Author: Marco Bubke <marco.bubke@nokia.com>
      Date: Thu Sep 9 19:37:01 2010 +0200
    • 2acb72146e272f58674c9b59eb193d26aa8b4aaf

    Description

      Hi,

      It looks like there is a memory leak in ProjectExplorer plugin - TargetSettingsPanelWidget

      http://qt.gitorious.org/qt-creator/qt-creator/blobs/master/src/plugins/projectexplorer/targetsettingspanel.cpp#line101

      src/plugins/projectexplorer/targetsettingspanel.cpp since line101
      something strange is ongoing with
      QVBoxLayout *noTargetLayout = new QVBoxLayout;
      It is created, a widget is added - but it is not assigned anywhere - it is lost.
      Perhaps it is missed with m_noTargetLayout?..

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            mdn Denis Mingulov
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes