TargetSettingsPanelWidget: Fix small memory leak

Fix a small memory leak spotted by Denis Mingulov.

Task-number: QTCREATORBUG-2338